--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -18,14 +18,18 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "expo-vector-icons": "^10.0.1",
+    "firebase": "^9.19.1",
     "framer-motion": "^10.10.0",
     "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^3.0.2",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "typescript": "^4.9.4",
+    "@types/react": "~18.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
