--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.9",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -18,6 +19,7 @@
     "@types/react": "~18.0.27",
     "axios": "^1.3.5",
     "expo": "~48.0.9",
+    "expo-font": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-vector-icons": "^10.0.1",
     "firebase": "^9.19.1",
@@ -29,7 +31,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.4.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
