--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -26,10 +26,12 @@
     "framer-motion": "^10.10.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-code-push": "^8.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.4.0",
